no sirven los test

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <button id="mostrar-vehiculos">Vehiculos</button>
           </article><br><br>
           <section id="sectionFilter" class="sectionFilter">
-            <select name="directores" class="item" id="filtroDirectores"> 
+            <select name="directores" class="Direc" id="filtroDirectores"> 
               <option disabled selected>Filtrar por director</option>
               <option value="Hayao Miyazaki">Hayao Miyazaki</option>
               <option value="Isao Takahata">Isao Takahata</option>
@@ -35,7 +35,7 @@
               <option value="Gorō Miyazaki">Gorō Miyazaki</option>
               <option value="Hiromasa Yonebayashi">Hiromasa Yonebayashi</option>
           </select>
-          <select name="productores" class="item" id="filtroProductores">
+          <select name="productores" class="Produc" id="filtroProductores">
             <option disabled selected>Filtrar por productor</option>
             <option value="Isao Takahata">Isao Takahata</option>
             <option value="Hayao Miyazaki">Hayao Miyazaki</option>
@@ -43,7 +43,7 @@
             <option value="Toshio Suzuki">Toshio Suzuki</option>
             <option value="Yoshiaki Nishimura">Yoshiaki Nishimura</option>
           </select> 
-          <select name="orden"  class="orden">
+          <select name="orden" id="orden" class="orden">
             <option hidden selected>Ordenar</option>
             <option value="az">A-Z</option>
             <option value="za">Z-A</option>
@@ -54,7 +54,7 @@
           <div id="contenedor-busqueda"></div>         
         </main>
         <footer>
-      <p class="pie">Creadoras de la pagina, enlaces relacionas como instagram, face, etc.</p>
+      <p class="pie">Ghiblioteca© 2023 Viviana Gómez. Todos los derechos reservados</p>
     </footer>
     <div id="root"></div>
     <script src="main.js" type="module"></script>
