--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <header>
       <img id="logo" src="./images/logo.png">
       <br>
-      <img id="banner" src="images/PELUSA.jpg"><h1>Bienvenid@s a Ghiblioteca</h1><img id="banner" src="images/PELUSA.jpg">
+      <img id="banner" src="images/PELUSA.jpg"><h1>Bienvenid@s a Ghiblioteca</h1><img class="banner" src="images/pelusa.jpg">
     </header>
       <div class="portada">
          <h2>“Dime, ¿ cuáles son los limites ? Los limites son tres: el cielo, la imaginación y tu misma”</h2>
@@ -25,7 +25,6 @@
             <button id="mostrar-locaciones">Locaciones</button>
             <button id="mostrar-vehiculos">Vehiculos</button>
           </article><br><br>
-          <section id="sectionFilter" class="sectionFilter">
             <select name="directores" class="Direc" id="filtroDirectores"> 
               <option disabled selected>Filtrar por director</option>
               <option value="Hayao Miyazaki">Hayao Miyazaki</option>
